force-app/main/default/objects/Rigger_Job_Time_Entry__c/Rigger_Job_Time_Entry__c.object-meta.xml
<CustomObject>
    <label>Rigger Job Time Entry</label>
    <nameField>
        <displayFormat>RJTE-{0000}</displayFormat>
        <label>Rigger Job Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rigger Job Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>