force-app/main/default/objects/Rigger_Job_Time_Entry__c/fields/Initial_Employee__c.field-meta.xml
<CustomField>
    <fullName>Initial_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Rigger Job Time Entries (Initial Employee)</relationshipLabel>
    <relationshipName>Rigger_Job_Time_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>