force-app/main/default/objects/Rigger_Job_Time_Entry__c/fields/Rigger_Job__c.field-meta.xml
<CustomField>
    <fullName>Rigger_Job__c</fullName>
    <label>Rigger Job</label>
    <referenceTo>Rigger_Job__c</referenceTo>
    <relationshipLabel>Rigger Job Time Entries</relationshipLabel>
    <relationshipName>Rigger_Job_Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>