force-app/main/default/objects/Rigger_Job_Time_Entry__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <description>Total time the Job has been active</description>
    <label>Total Time</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>